feat(AS-33): delete android endpoint (#20)
