# handler/androids.go
@@ -66,3 +66,32 @@ func GetAndroid(c *gin.Context) {
 		c.JSON(http.StatusOK, android)
 	}
 }
+
+// DeleteAndroid ... Delete Android
+// @Summary  Deletes an android
+// @Tags     androids
+// @Param    id           path      string  true  "Android ID"
+// @Success  200          {object}  model.Android
+// @Failure  400,404,500  {object}  model.ErrorResponse
+// @Router   /androids/{id} [delete]
+func DeleteAndroid(c *gin.Context) {
+	type Uri struct {
+		ID string `uri:"id" binding:"required,uuid"`
+	}
+	var uri Uri
+	if err := c.ShouldBindUri(&uri); err != nil {
+		c.Error(err)
+		return
+	}
+
+	nrTxn := nrgin.Transaction(c)
+	nrCtx := newrelic.NewContext(context.Background(), nrTxn)
+
+	android, err := db.Database.DeleteAndroid(nil, nrCtx, uri.ID)
+
+	if err != nil {
+		c.Error(err)
+	} else {
+		c.JSON(http.StatusOK, android)
+	}
+}
