# handler/handler.go
@@ -21,6 +21,7 @@ func SetUpRouter() *gin.Engine {
 
 	r.POST("/android_groups/:id/androids", CreateAndroid)
 	r.GET("/androids/:id", GetAndroid)
+	r.DELETE("/androids/:id", DeleteAndroid)
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	return r
